--- a/gestionpedidos/templates/base.html
+++ b/gestionpedidos/templates/base.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Subastas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:8000/register">Registrarse</a>
+            <a class="nav-link" href="reigster.html">Registrarse</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="http://127.0.0.1:8000/login">Iniciar Sesion</a>
