Deploy debug fixed 6

--- a/gestionpedidos/templates/base.html
+++ b/gestionpedidos/templates/base.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="reigster.html">Registrarse</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:8000/login">Iniciar Sesion</a>
+            <a class="nav-link" href="{% url 'houses' %}">Iniciar Sesion</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="#">Nombre usuario</a>
