--- a/gestionpedidos/templates/base.html
+++ b/gestionpedidos/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Navbar-->
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand" href="http://127.0.0.1:8000/home">
+      <a class="navbar-brand" href="{% url 'home' %}">
           <img style="height: 50px" src="https://imgurl.me/images/2020/08/25/logo0e3d19c02e025135.png" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -23,19 +23,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="http://127.0.0.1:8000/home">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'home' %}">Inicio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <li class="nav-item">
-              <a class="nav-link" href="http://127.0.0.1:8000/housess">Propiedades</a>
+              <a class="nav-link" href="{% url 'houses' %}">Propiedades</a>
             </li>
             <a class="nav-link" href="#">Subastas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reigster.html">Registrarse</a>
+            <a class="nav-link" href="{% url 'register' %}">Registrarse</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'houses' %}">Iniciar Sesion</a>
+            <a class="nav-link" href="{% url 'loginnn' %}">Iniciar Sesion</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="#">Nombre usuario</a>
