Fixed bug in Search Bar

--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -5,7 +5,7 @@
 
     <div style="margin-bottom: 6%" class="container">
 
-        <form action="/housess" style="display: flex; justify-content: center; margin: 4% 0" class="col-md-4">
+        <form action="{% url 'houses' %}" style="display: flex; justify-content: center; margin: 4% 0" class="col-md-4">
           <div class="form-group">
             <input type="text" class="form-control" id="search_field" name="search_field" aria-describedby="search_field" placeholder="Buscar">
           </div>
