--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -12,7 +12,7 @@
           <button style="height: 37px; margin-left: 2%" type="submit" class="btn btn-primary"> Buscar</button>
         </form>
 
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <button style="padding: 4% 0" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Agregar propiedad
 </button>
 
@@ -30,8 +30,8 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Guardar Cambios</button>
       </div>
     </div>
   </div>
