Change in Modal Register

--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -12,7 +12,7 @@
           <button style="height: 37px; margin-left: 2%" type="submit" class="btn btn-primary"> Buscar</button>
         </form>
 
-        <button style="padding: 4% 0" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <button style="margin: 4% 0" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Agregar propiedad
 </button>
 
