Test Models Register

--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -11,8 +11,8 @@
           </div>
           <button style="height: 37px; margin-left: 2%" type="submit" class="btn btn-primary"> Buscar</button>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Agregar propiedad
+            <button style="height: 37px; margin-left: 2%" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                Agregar Propiedad
             </button>
 
         </form>
@@ -30,7 +30,10 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <form>
+            <p1>Prueba1</p1>
+            <p1>Prueba2</p1>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
