--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -30,14 +30,14 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form action="https://www.google.com/">
             <p1>Prueba1</p1>
             <p1>Prueba2</p1>
+            <button type="submit" value="Agregar propiedadd"></button>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar Cambios</button>
       </div>
     </div>
   </div>
