--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -33,7 +33,7 @@
         <form action="https://www.google.com/">
             <p1>Prueba1</p1>
             <p1>Prueba2</p1>
-            <button type="submit" value="Agregar propiedadd"></button>
+            <input class="btn btn-primary" type="submit" value="Agregar Propiedad">
         </form>
       </div>
       <div class="modal-footer">
