--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -24,21 +24,21 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Nueva Propiedad</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form action="https://www.google.com/" method="post">
+        <form action="" method="post">
             {% csrf_token %}
 
           <div class="form-group">
             <label for="exampleInputEmail1">Ciudad</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ciudad">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ciudad">
 
             <label for="exampleInputEmail1">Descripcion</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Descripcion">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Descripcion">
           </div>
           <button type="submit" class="btn btn-primary">Agregar propiedad</button>
         </form>
