--- a/gestionpedidos/templates/houses.html
+++ b/gestionpedidos/templates/houses.html
@@ -41,10 +41,10 @@
             <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Descripcion" name="descripcion">
 
             <label for="exampleInputEmail1">Precio</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Descripcion" name="precio">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Precio" name="precio">
 
             <label for="exampleInputEmail1">URL de la imagen</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Descripcion" name="imagen">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Imagen" name="imagen">
 
           </div>
           <button type="submit" class="btn btn-primary">Agregar propiedad</button>
